--- a/html/header.html
+++ b/html/header.html
@@ -8,29 +8,35 @@
     <link rel="stylesheet" href="../css/header.css">
 </head>
 <body>
+
     <div class="logo">
         <img src="../img/img/Logo-goit.png" alt="goit" class="logo-1">
     </div>
-<div class="fill">
-    <div class="about">
-        <p class="paragraf-1">Бесплатная презентация для тех, кто хочет сменить профессию и начать карьеру в IT-сфере</p>
-        <p class="paragraf-2">Узнай за 1 час каким может быть твой путь в IT</p>
-        <p class="paragraf-3">Как с нуля всего за 3-5 месяцев получить все необходимые знания и навыки для уверенного старта карьеры в IT</p>
-        <p class="paragraf-4">Ближайшая встреча</p>
-        <p class="paragraf-5">Киев, 16 декабря 19:00</p>
-    </div>
-    <div class="block">
-        <div class="text">
-            <p class="text-1">Оставте заявку на участие в бесплатной презентации</p>
-            <p class="text-2">С вам свяжется карьерный консультант и ответит на вопросы</p>
+    <div class="fill">
+        <div class="about">
+            <p class="paragraf-1">Бесплатная  презентация  для  тех,  кто  хочет  сменить  профессию  и  начать  карьеру  в  IT-сфере</p>
+            <p class="paragraf-2">Узнай за 1 час каким может быть твой путь в IT</p>
+            <p class="paragraf-3">Как с нуля всего за 3-5 месяцев получить все необходимые знания и навыки для уверенного старта карьеры в IT</p>
+            <p class="paragraf-4">Ближайшая встреча</p>
+            <p class="paragraf-5">Киев, 16 декабря 19:00</p>
         </div>
-        <div class="contact">
-            <input type="text" class="input" placeholder="Имя">
-            <input type="text" class="input" placeholder="Email">
-            <input type="text" class="input" placeholder="Телефон">
-            <button type="submit" class="button">Оставить заявку</button>
+        <div class="form">
+            <div class="block">
+                <div class="text">
+                    <p class="text-1">Оставте заявку на участие в бесплатной презентации</p>
+                    <p class="text-2">С вам свяжется карьерный консультант и ответит на вопросы</p>
+                </div>
+                <div class="contact">
+                    <input type="text" class="input" placeholder="Имя">
+                    <input type="text" class="input" placeholder="Email">
+                    <input type="text" class="input" placeholder="Телефон">
+                    <button type="submit" class="button">ОСТАВИТЬ ЗАЯВКУ</button>
+                </div>
+            </div> 
+            <p class="after">Политика конфиденциальности</p>
         </div>
     </div>
-</div>
+  
+
 </body>
 </html>
