--- a/html/3.html
+++ b/html/3.html
@@ -1,88 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3</title>
-  <link rel="stylesheet" href="3.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>3</title>
+    <link rel="stylesheet" href="../css/3.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<div class="everything">
-  <div class="cardio">
-    <div class="cardborder">
- <div class="answer">
- <h2>[ Почему сфера IT
-   так интересна ]
- </div>
- <div class="allcard">
-  <div class="card3">
-  <div class="stat">
-  <h3>Сегодня подготовили для вас обзор рынка из отчета ассоциации IT Ukraine</h3>
-  </div>
-  <div class="inform">
-  <h3 class="number">12634</h3>
-  <p class="textik">IT-Компании зарегестрированные в Украине</p>
-  </div>
-  <div class="inform">
-  <h3 class="number">2500$</h3>
-  <p class="textik">Седний доход IT-Специалиста</p>
-  </div>
-  <div class="inform">
-  <h3 class="number">127тыс.</h3>
-  <p class="textik">Человек работает в Украинский IT-Сфере сейчас</p>
-  </div>
-  <div class="inform">
-  <h3 class="number">2000</h3>
-  <p class="textik">Новых IT-Компаний появилось за 2 года</p>
-  </div>
-  <div class="inform">
-  <h3 class="number">83%</h3>
-  <p class="textik">Всех затрат IT-Компаний - это затраты на оплату труда разроботчиков</p>
-  </div>
-  <div class="inform">
-  <h3 class="number">200тыс.</h3>
-  <p class="textik">IT-Специалистов по прогнозам в стране через 4-5 лет</p>
-  </div>
-  <div class="money">
-  <div class="StatMoney">
-  <h3>Доход IT-шников превышает среднюю зарплату по другим отрасслям</h3>
-  </div>
-  </div>
- </div>
-  <div class="otherhalf">
-   <div class="facts">
-   <h3 class="TextNum">в 7 раз</h3>
-   <p class="uslovie">При оффициальном трудоустрйстве IT-специалиста</p>
-   </div>
-   <div class="facts">
-   <h3 class="TextNum">В 7,8 раз</h3>
-   <p class="uslovie">При работе через ФОП</p>
-   </div></div>
-  </div>
-  </div>
-  </div>
- <div class="dopinf">
-  <h2 class="predlog">[ При этом IT компании предлагают... ]</h2>
-  <ul class="pluses">
-     <li class="pluses2">
-     <p class="goodies"></p>Стабильно высокие зарплаты в долларах</p>
-     </li>
-     <li class="pluses2">
-      <p class="goodies">Стабильный карьерный рост согласно вашим реальным знаниям и навыкам</p>
-     </li>
-     <li class="pluses2">
-      <p class="goodies">Комплексный соц.пакет</p>
-     </li>
-     <li class="pluses2">
-      <p class="goodies">Отличные условия труда в современных офисах</p>
-     </li>
-     <li class="pluses2">
-      <p class="goodies">Гибкий рабочий график и возможност ьработы даже из дома</p>
-     </li>
- </ul>
- </div>
-</div>
-</div>
+    <div class="everything">
+        <div class="cardio">
+            <div class="cardborder">
+                <div class="answer">
+                    <h2>[ Почему сфера IT так интересна ]
+                </div>
+                <div class="allcard">
+                    <div class="card3">
+                        <div class="stat">
+                            <h3>Сегодня подготовили для вас обзор рынка из отчета ассоциации IT Ukraine</h3>
+                        </div>
+                        <div class="inform">
+                            <h3 class="number">12634</h3>
+                            <p class="textik">IT-Компании зарегестрированные в Украине</p>
+                        </div>
+                        <div class="inform">
+                            <h3 class="number">2500$</h3>
+                            <p class="textik">Седний доход IT-Специалиста</p>
+                        </div>
+                        <div class="inform">
+                            <h3 class="number">127тыс.</h3>
+                            <p class="textik">Человек работает в Украинский IT-Сфере сейчас</p>
+                        </div>
+                        <div class="inform">
+                            <h3 class="number">2000</h3>
+                            <p class="textik">Новых IT-Компаний появилось за 2 года</p>
+                        </div>
+                        <div class="inform">
+                            <h3 class="number">83%</h3>
+                            <p class="textik">Всех затрат IT-Компаний - это затраты на оплату труда разроботчиков</p>
+                        </div>
+                        <div class="inform">
+                            <h3 class="number">200тыс.</h3>
+                            <p class="textik">IT-Специалистов по прогнозам в стране через 4-5 лет</p>
+                        </div>
+                        <div class="money">
+                            <div class="StatMoney">
+                                <h3>Доход IT-шников превышает среднюю зарплату по другим отрасслям</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="otherhalf">
+                        <div class="facts">
+                            <h3 class="TextNum">в 7 раз</h3>
+                            <p class="uslovie">При оффициальном трудоустрйстве IT-специалиста</p>
+                        </div>
+                        <div class="facts">
+                            <h3 class="TextNum">В 7,8 раз</h3>
+                            <p class="uslovie">При работе через ФОП</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="dopinf">
+            <h2 class="predlog">[ При этом IT компании предлагают... ]</h2>
+            <ul class="pluses">
+                <li class="pluses2">
+                    <p class="goodies"></p>Стабильно высокие зарплаты в долларах</p>
+                </li>
+                <li class="pluses2">
+                    <p class="goodies">Стабильный карьерный рост согласно вашим реальным знаниям и навыкам</p>
+                </li>
+                <li class="pluses2">
+                    <p class="goodies">Комплексный соц.пакет</p>
+                </li>
+                <li class="pluses2">
+                    <p class="goodies">Отличные условия труда в современных офисах</p>
+                </li>
+                <li class="pluses2">
+                    <p class="goodies">Гибкий рабочий график и возможност ьработы даже из дома</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    </div>
 </body>
+
 </html>
