--- a/html/section2.html
+++ b/html/section2.html
@@ -12,36 +12,33 @@
 <body>
     <div class="section2">
         <div class="container">
-
-            <div class="text">
-                <h2 class="h2">[Также вы получите личную консудьтацию по старту карьеры_] </h2>
+            <div class="text-section2">
+                <h2 class="h2-section2">[ Также вы получите личную консудьтацию по старту карьеры_] </h2>
             </div>
-            <div class="cards">
+            <div class="cards-section2">
+                <div class="card-section2" data-number="01">
 
-                <div class="card" data-number="01">
-
-                    <div class="line"></div>
-                    <p class="card_text">Определите какое направление будет легче,интересней и быстрее освоить <span
-                            class="bold">именно вам</span> .</p>
+                    <div class="line-section2"></div>
+                    <p class="card_text-section2">Определите какое направление будет легче,интересней и быстрее освоить
+                        <span class="bold-section2">именно вам</span> .</p>
                 </div>
 
-                <div class="card" data-number="02">
-                    <div class="line"></div>
-                    <p class="card_text">Вместе с консультантом сформеруйте пошаговый план входа в IT <span class="bold">с учетом ваших текущих знаний</span> и навыков.</p>
+                <div class="card-section2" data-number="02">
+                    <div class="line-section2"></div>
+                    <p class="card_text-section2">Вместе с консультантом сформеруйте пошаговый план входа в IT <span class="bold">с учетом ваших текущих знаний</span> и навыков.</p>
                 </div>
 
-                <div class="card" data-number="03">
-                    <div class="line"></div>
-                    <p class="card_text">Получите доступ <span class="bold">к 3-м развернутым видео</span> по ключевым направлениям в IT,чтобы
-                        самостоятельно
-                        изучить все
-                        детали.</p>
+                <div class="card-section2" data-number="03">
+                    <div class="line-section2"></div>
+                    <p class="card_text-section2">Получите доступ <span class="bold">к 3-м развернутым видео</span> по ключевым направлениям в IT,чтобы самостоятельно изучить все детали.
+                    </p>
                 </div>
             </div>
-            <div class="button_location">
-                <button class="button">
-                    <p class="button_text">Получить бесплатный доступ ко всем материалам</p>
-                </button></div>
+            <div class="button_location-section2">
+                <button class="button-section2">
+                    <p class="button_text-section2">Получить бесплатный доступ ко всем материалам</p>
+                </button>
+            </div>
         </div>
     </div>
 </body>
