--- a/html/footer.html
+++ b/html/footer.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/footer.css">
     <title>Document</title>
-    
+
 </head>
-<body><div class="container">
-  <div class="footer_background">
-  <div ><button class="button-line">Оставить заявку</button></div>
-  <div class="Big-line"></div>
-</div>
+
+<body>
+    <div class="container">
+        <div class="footer_background">
+            <div><button class="button-line">Оставить заявку</button></div>
+            <div class="Big-line"></div>
+        </div>
 
 
 
@@ -27,8 +30,9 @@
 
 
 
-</div>
+    </div>
 
 
 </body>
+
 </html>
