--- a/html/section2.html
+++ b/html/section2.html
@@ -15,25 +15,26 @@
             <div class="text-section2">
                 <h2 class="h2-section2">[ Также вы получите личную консудьтацию по старту карьеры_] </h2>
             </div>
+        <div class="cards-media-section2">
             <div class="cards-section2">
                 <div class="card-section2" data-number="01">
-
                     <div class="line-section2"></div>
                     <p class="card_text-section2">Определите какое направление будет легче,интересней и быстрее освоить
                         <span class="bold-section2">именно вам</span> .</p>
                 </div>
-
                 <div class="card-section2" data-number="02">
                     <div class="line-section2"></div>
-                    <p class="card_text-section2">Вместе с консультантом сформеруйте пошаговый план входа в IT <span class="bold">с учетом ваших текущих знаний</span> и навыков.</p>
+                    <p class="card_text-section2">Вместе с консультантом сформеруйте пошаговый план входа в IT <span
+                            class="bold">с учетом ваших текущих знаний</span> и навыков.</p>
                 </div>
 
                 <div class="card-section2" data-number="03">
                     <div class="line-section2"></div>
-                    <p class="card_text-section2">Получите доступ <span class="bold">к 3-м развернутым видео</span> по ключевым направлениям в IT,чтобы самостоятельно изучить все детали.
+                    <p class="card_text-section2">Получите доступ <span class="bold">к 3-м развернутым видео</span> по
+                        ключевым направлениям в IT,чтобы самостоятельно изучить все детали.
                     </p>
                 </div>
-            </div>
+            </div></div>
             <div class="button_location-section2">
                 <button class="button-section2">
                     <p class="button_text-section2">Получить бесплатный доступ ко всем материалам</p>
